--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ pillow==10.4.0
 proglog==0.1.10
 pydantic==2.8.2
 pydantic_core==2.20.1
+pydub==0.25.1
 python-dotenv==1.0.1
 requests==2.32.3
 setuptools==73.0.1
